Added the a element for the w01-task.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Relga-Zidrey Nkounkou | CSE 121B | BYU-Idaho</title>
 </head>
+<header>
+  <nav>
+    <a href="w01-task.html">W01-Task</a>
+  </nav>
+</header>
 <body>
   <h1>Relga-Zidrey Nkounkou | CSE 121B | BYU-Idaho</h1>
   <h2>Brazziville, Republic of Congo</h2>
