Changed the index.html of the final project into project.html and linked it with the main file index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="w03-task.html">W3 Task</a></li>
       <li><a href="w04-task.html">W4 Task</a></li>
       <li><a href="w05-task.html">W5 Task</a></li>
-      <li><a href="project.html">Project</a></li>
+      <li><a href="myProject/project.html">Project</a></li>
     </ul>
   </nav>
   <main id="home">
